Newer file crashes at render on official 2.76b version. (both, CPU or GPU) #47377

Closed
opened 2016-02-09 21:05:41 +01:00 by tuqueque tuquequin · 13 comments

System Information

O.S.: Manjaro Linux, 64-bit
Processor: Intel Q9550, memory: 8GB DDR3
Graphic Card: Nvidia Geforce 550 Ti (two of them)
Nvidia graphics driver version: 352.63

Blender Version

Works: blender-2.76-b80c073-linux-glibc211-x86_64 (downloaded from Buildbot on feb-3-2016)
Fails: blender-2.76b-linux-glibc211-x86_64 (official 2.76b from Blender.org)

Short description of error

This same thing happened to me a month ago with another project I was working on: I modeled a building in a newer version of blender (downloaded from the Blender Buildbot), I sent the model to my client, who's using the official 2.76b version and it crashes on render immediately on 2.76b (I confirmed it), while in my newer version (and another from Jan-21) it renders fine.

Attached is the .blend scene.
CrashRender.blend

**System Information** O.S.: Manjaro Linux, 64-bit Processor: Intel Q9550, memory: 8GB DDR3 Graphic Card: Nvidia Geforce 550 Ti (two of them) Nvidia graphics driver version: 352.63 **Blender Version** Works: blender-2.76-b80c073-linux-glibc211-x86_64 (downloaded from Buildbot on feb-3-2016) Fails: blender-2.76b-linux-glibc211-x86_64 (official 2.76b from Blender.org) **Short description of error** This same thing happened to me a month ago with another project I was working on: I modeled a building in a newer version of blender (downloaded from the Blender Buildbot), I sent the model to my client, who's using the official 2.76b version and it crashes on render immediately on 2.76b (I confirmed it), while in my newer version (and another from Jan-21) it renders fine. Attached is the .blend scene. [CrashRender.blend](https://archive.blender.org/developer/F281336/CrashRender.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by tuqueque tuquequin 2016-02-09 21:05:41 +01:00

Added subscriber: @tuqueque

Added subscriber: @tuqueque

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Confirmed the crash on Windows 7 x64 here.

This should not happen, but it's always possible that a blend file from a newer Blender causes issues in older ones. This so called forward compatibility is nice to have, but there is no guarantee that it works.

@Sergey Any opinion here?

Confirmed the crash on Windows 7 x64 here. This *should* not happen, but it's always possible that a blend file from a newer Blender causes issues in older ones. This so called forward compatibility is nice to have, but there is no guarantee that it works. @Sergey Any opinion here?

@ThomasDinges

I know about some forward compatibilities issues that appear here and there sometimes, but as you pointed out, this should not happen, and I think this one is more a bug than anything, since the model in this scene is super simple, nothing fancy, no materials, nothing but the fairly simple model... Besides, the "problem" solves if I open a new, empty scene in 2.76b and append all objects from the newer file... So the problem might not be too hard to find/solve, I think. (I might be wrong, of course).

@ThomasDinges I know about some forward compatibilities issues that appear here and there sometimes, but as you pointed out, this *should* not happen, and I think this one is more a bug than anything, since the model in this scene is super simple, nothing fancy, no materials, nothing but the fairly simple model... Besides, the "problem" solves if I open a new, empty scene in 2.76b and append all objects from the newer file... So the problem might not be too hard to find/solve, I think. (I might be wrong, of course).

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed on linux64 too, here is gdb backtrace:

blender: /home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp:231: ccl::vector<float> ccl::filter_table(ccl::FilterType, float): Assertion `0' failed.

Program received signal SIGABRT, Aborted.
[Switching to Thread 0x7fff94f25700 (LWP 14857)]
0x00007fffec8af507 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:55
55	../sysdeps/unix/sysv/linux/raise.c: Aucun fichier ou dossier de ce type.
(gdb) bt
- 0  0x00007fffec8af507 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:55
- 1  0x00007fffec8b08da in __GI_abort () at abort.c:89
#2  0x00007fffec8a859d in __assert_fail_base (fmt=0x7fffec9e56b8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x94aff20 "0", 
    file=file@entry=0x94afea0 "/home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp", line=line@entry=231, 
    function=function@entry=0x94b01a0 <ccl::filter_table(ccl::FilterType, float)::__PRETTY_FUNCTION__> "ccl::vector<float> ccl::filter_table(ccl::FilterType, float)") at assert.c:92
#3  0x00007fffec8a8652 in __GI___assert_fail (assertion=0x94aff20 "0", file=0x94afea0 "/home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp", line=231, 
    function=0x94b01a0 <ccl::filter_table(ccl::FilterType, float)::__PRETTY_FUNCTION__> "ccl::vector<float> ccl::filter_table(ccl::FilterType, float)") at assert.c:101
- 4  0x000000000561428a in ccl::filter_table (type=(unknown: 2), width=1,5) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp:231
- 5  0x0000000005616a50 in ccl::Film::device_update (this=0x6070002337b0, device=0x6310039bc800, dscene=0x7fffce6e3900, scene=0x7fffce6e3800) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp:435
- 6  0x00000000056e0ec6 in ccl::Scene::device_update (this=0x7fffce6e3800, device_=0x6310039bc800, progress=...) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/scene.cpp:224
- 7  0x00000000056ec300 in ccl::Session::update_scene (this=0x61b0002c4580) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/session.cpp:819
- 8  0x00000000056e92c7 in ccl::Session::run_cpu (this=0x61b0002c4580) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/session.cpp:553
- 9  0x00000000056eae53 in ccl::Session::run (this=0x61b0002c4580) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/session.cpp:687
- 10 0x00000000056f5b84 in boost::_mfi::mf0<void, ccl::Session>::operator() (this=0x60400037d858, p=0x61b0002c4580) at /usr/include/boost/bind/mem_fn_template.hpp:49
- 11 0x00000000056f51be in boost::_bi::list1<boost::_bi::value<ccl::Session*> >::operator()<boost::_mfi::mf0<void, ccl::Session>, boost::_bi::list0> (this=0x60400037d868, f=..., a=...) at /usr/include/boost/bind/bind.hpp:253
- 12 0x00000000056f4be6 in boost::_bi::bind_t<void, boost::_mfi::mf0<void, ccl::Session>, boost::_bi::list1<boost::_bi::value<ccl::Session*> > >::operator() (this=0x60400037d858) at /usr/include/boost/bind/bind_template.hpp:20
- 13 0x00000000056f4655 in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf0<void, ccl::Session>, boost::_bi::list1<boost::_bi::value<ccl::Session*> > >, void>::invoke (function_obj_ptr=...)
    at /usr/include/boost/function/function_template.hpp:159
- 14 0x00000000055250fa in boost::function0<void>::operator() (this=0x60400037d850) at /usr/include/boost/function/function_template.hpp:773
- 15 0x00000000056ef8a6 in ccl::thread::run (arg=0x60400037d850) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/../util/util_thread.h:68
- 16 0x00007ffff5372284 in start_thread (arg=0x7fff94f25700) at pthread_create.c:333
- 17 0x00007fffec96497d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
Confirmed on linux64 too, here is gdb backtrace: ``` blender: /home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp:231: ccl::vector<float> ccl::filter_table(ccl::FilterType, float): Assertion `0' failed. Program received signal SIGABRT, Aborted. [Switching to Thread 0x7fff94f25700 (LWP 14857)] 0x00007fffec8af507 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:55 55 ../sysdeps/unix/sysv/linux/raise.c: Aucun fichier ou dossier de ce type. (gdb) bt - 0 0x00007fffec8af507 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:55 - 1 0x00007fffec8b08da in __GI_abort () at abort.c:89 #2 0x00007fffec8a859d in __assert_fail_base (fmt=0x7fffec9e56b8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x94aff20 "0", file=file@entry=0x94afea0 "/home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp", line=line@entry=231, function=function@entry=0x94b01a0 <ccl::filter_table(ccl::FilterType, float)::__PRETTY_FUNCTION__> "ccl::vector<float> ccl::filter_table(ccl::FilterType, float)") at assert.c:92 #3 0x00007fffec8a8652 in __GI___assert_fail (assertion=0x94aff20 "0", file=0x94afea0 "/home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp", line=231, function=0x94b01a0 <ccl::filter_table(ccl::FilterType, float)::__PRETTY_FUNCTION__> "ccl::vector<float> ccl::filter_table(ccl::FilterType, float)") at assert.c:101 - 4 0x000000000561428a in ccl::filter_table (type=(unknown: 2), width=1,5) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp:231 - 5 0x0000000005616a50 in ccl::Film::device_update (this=0x6070002337b0, device=0x6310039bc800, dscene=0x7fffce6e3900, scene=0x7fffce6e3800) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/film.cpp:435 - 6 0x00000000056e0ec6 in ccl::Scene::device_update (this=0x7fffce6e3800, device_=0x6310039bc800, progress=...) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/scene.cpp:224 - 7 0x00000000056ec300 in ccl::Session::update_scene (this=0x61b0002c4580) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/session.cpp:819 - 8 0x00000000056e92c7 in ccl::Session::run_cpu (this=0x61b0002c4580) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/session.cpp:553 - 9 0x00000000056eae53 in ccl::Session::run (this=0x61b0002c4580) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/session.cpp:687 - 10 0x00000000056f5b84 in boost::_mfi::mf0<void, ccl::Session>::operator() (this=0x60400037d858, p=0x61b0002c4580) at /usr/include/boost/bind/mem_fn_template.hpp:49 - 11 0x00000000056f51be in boost::_bi::list1<boost::_bi::value<ccl::Session*> >::operator()<boost::_mfi::mf0<void, ccl::Session>, boost::_bi::list0> (this=0x60400037d868, f=..., a=...) at /usr/include/boost/bind/bind.hpp:253 - 12 0x00000000056f4be6 in boost::_bi::bind_t<void, boost::_mfi::mf0<void, ccl::Session>, boost::_bi::list1<boost::_bi::value<ccl::Session*> > >::operator() (this=0x60400037d858) at /usr/include/boost/bind/bind_template.hpp:20 - 13 0x00000000056f4655 in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf0<void, ccl::Session>, boost::_bi::list1<boost::_bi::value<ccl::Session*> > >, void>::invoke (function_obj_ptr=...) at /usr/include/boost/function/function_template.hpp:159 - 14 0x00000000055250fa in boost::function0<void>::operator() (this=0x60400037d850) at /usr/include/boost/function/function_template.hpp:773 - 15 0x00000000056ef8a6 in ccl::thread::run (arg=0x60400037d850) at /home/i74700deb64/blender/__work__/src/intern/cycles/render/../util/util_thread.h:68 - 16 0x00007ffff5372284 in start_thread (arg=0x7fff94f25700) at pthread_create.c:333 - 17 0x00007fffec96497d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109 ```

Yes, surely forward compatibility should be preserved as much as possible. Unfortunately, we can't fix existing releases, but can prevent this from happening in the future. Will commit tweak in a bit,

Yes, surely forward compatibility should be preserved as much as possible. Unfortunately, we can't fix existing releases, but can prevent this from happening in the future. Will commit tweak in a bit,

Added subscriber: @brecht

Added subscriber: @brecht

Maybe we should rename the property from filter_type to e.g. pixel_filter_type so it doesn't crash in older versions? If a lot of files created in 2.77 crash when rendering in 2.76 that would be pretty bad.

Maybe we should rename the property from `filter_type` to e.g. `pixel_filter_type` so it doesn't crash in older versions? If a lot of files created in 2.77 crash when rendering in 2.76 that would be pretty bad.

This issue was referenced by 5a45ccaf3e

This issue was referenced by 5a45ccaf3e5102ee571599fa9f26a78ac1f6d0f4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@ae66d069f0

This issue was referenced by blender/cycles@ae66d069f020ba1a499a5b75f4381238bf048a8a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47377
No description provided.